# Stepper-motor-sequence-controller

./: Documentation.docx  README.md
Source Code/: CMakeLists.txt  buffer.c  buffer.h  keypad4x4.c  keypad4x4.h  my_lcd_1602_i2c.c  my_lcd_1602_i2c.h  proiect_MES.c  proiect_MES.uf2
